--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" async defer></script>
-    <title>PlayGround</title>
+    <link rel="shortcut icon" type="image/png" href="./smile.png">
+    <title>Pop</title>
   </head>
   <body>
     <div id="balloon"></div>
